# video-analyzer

./: .gitignore  azure_insights.json  pyproject.toml  verify_insights.py
docs/: groq-integration-plan.md  plan.md  refactoring_plan.md
src/video_analyzer/: __init__.py  cli.py  config.py  interfaces.py  service.py
src/video_analyzer/analyzer/: __init__.py  deduplication.py  exceptions.py  gemini.py  groq.py  hooks.py  prompts.py  provider.py  transcribe.py  vision.py
src/video_analyzer/api/: __init__.py  routes.py  schemas.py
src/video_analyzer/ingestion/: __init__.py  downloader.py  processor.py
src/video_analyzer/search/: __init__.py  reranker.py
src/video_analyzer/storage/: __init__.py  database.py  media.py  models.py
